--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/sw.js"></script>
+    <script type="module" src="/sw.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
